Refactor .env.example

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ REDIS_PORT=
 REDIS_PASSWORD=
 REDIS_CACHE_EXP_TIME=
 # mongodb
-# DB_USERNAME=aliahmedfathi37
-# DB_PASSWORD=s9y28lD901eJUn1E
-# DB_NAME=ecommerce-app
+# DB_USERNAME=
+# DB_PASSWORD=
+# DB_NAME=
 
 AUTH_ACCESS_TOKEN_SECRET=
 AUTH_ACCESS_TOKEN_EXPIRY=
